# tsd-agent-lab

./: .gitignore  AGENTS.md  LICENSE  PHASE-0A-SUMMARY.md  PHASE-0B-SUMMARY.md  PHASE1-QUICKSTART.md  README.md  agent-output.md  broken-builds-data-2026-07-13.json  broken-builds-data-2026-07-16.json  broken-builds-data-2026-07-17.json  my-pilot-task.yaml  pr-inventory-data-2026-07-17.json  pr-inventory-data-2026-07-21.json  pr-inventory-data-2026-07-22.json  pr-inventory-data-2026-07-23.json  pr-inventory-data-2026-07-24.json
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  hotkeys.json  workspace.json
.smart-env/: smart_env.json
data/: pr-inventory-collect.sh
docs/: README.md  agent-guidance.md  branch-only-mode.md  draft-pr-mode.md  evaluation.md  getting-started.md  (+11 more)
skills/codebase-map/cases/case-001-simple-python-cli/: README.md  input.yaml  pyproject.toml
skills/codebase-map/cases/case-001-simple-python-cli/src/csv2json/: cli.py  converter.py
skills/codebase-map/cases/case-001-simple-python-cli/tests/: test_converter.py
skills/codebase-map/cases/case-005-rust-monorepo/: Cargo.toml  README.md  annotations.yaml
skills/codebase-map/cases/case-005-rust-monorepo/.github/workflows/: ci.yml
skills/codebase-map/cases/case-005-rust-monorepo/crates/config-core/: Cargo.toml
skills/codebase-map/cases/case-005-rust-monorepo/crates/config-core/src/: error.rs  lib.rs
skills/codebase-map/cases/case-005-rust-monorepo/crates/configctl/: Cargo.toml
skills/codebase-map/cases/case-005-rust-monorepo/crates/configctl/src/: main.rs
(+381 files in other folders)
