[workspace]
resolver = "2"
members = [
    "crates/configctl",
    "crates/config-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
