[package]
name = "config-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared library for parsing and validating configuration files"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
